apps/generic/overlays/jellyfin/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  template:
    spec:
      containers:
        - name: container
          image: ghcr.io/jellyfin/jellyfin:10.10
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /config
              subPath: configs/jellyfin/
            - name: main-volume
              mountPath: /media
              subPath: public/
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: http
            initialDelaySeconds: 30
            timeoutSeconds: 10
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
