apps/generic/overlays/jellyfin/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  ports:
    - name: http
      port: 8096
      protocol: TCP
      targetPort: http
